[package]
name = "mc_json_stuff"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
etagere = "0.2.10"
image = "0.25.1"
indexmap = { version = "2.2.6", features = ["serde"] }
num-traits = "0.2.19"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
three-d = { version = "0.17.0", features = ["egui-gui"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
